# online-turn-based-game

./: .gitignore  CMakeLists.txt  README.md
imgui/imgui/: imgui_demo.cpp
include/: mainClient.hpp  netClient.hpp  netServer.hpp
include/game/: gameClient.hpp  gameCommon.hpp  gameServer.hpp
include/net/: baseClient.hpp  baseServer.hpp  common.hpp  connection.hpp  message.hpp  tsqueue.hpp
include/render/: camera.h  cubepos.h  framebuffer.h  mesh.h  model.h  picking.h  shader.h  textureImporter.h
include/render/glad/glad/: glad.h
resources/: imgui.ini
resources/models/: hexa.glb
resources/models/mainShip/: mainShip.gltf
resources/models/shipL1/: shipL1.gltf
resources/models/shipL2/: shipL2.gltf
resources/models/shipL3/: shipL3.gltf
shaders/: ground.fs  ground.vs  id.fs  ship2.fs  ship2.vs
src/: mainClient.cpp  main_c.cpp  main_s.cpp  netClient.cpp  netServer.cpp
src/game/: gameClient.cpp  gameCommon.cpp  gameServer.cpp
src/glad/: glad.c
src/net/: baseClient.cpp  baseServer.cpp  connection.cpp  message.cpp  tsqueue.cpp
src/render/: framebuffer.cpp  picking.cpp  textureImporter.cpp
